package Data;

public class Resources {
    //Change paths here

    //Path to post1.txt
    public static final String postPath = "src/main/resources/post1.txt";
    //Path to invertedFile.txt
    public static final String invertedFilePath = "src/main/resources/invertedFile.txt";
    //Path to file.txt
    public static final String filePath = "src/main/resources/file.txt";

    public static final String queryFilePath = "src/main/resources/queryT";

    public static final String queryTDNFilePath = "src/main/resources/queryTDN";


}
